# Split-pdf

./: Pipfile  pyproject.toml  requirement.txt  split-pdf.py
