[tool.poetry]
name = "split-pdf"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "split_pdf"}]

[tool.poetry.dependencies]
python = "^3.11"
pypdf = "^3.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
